<resources>
    <string name="app_name">mobile_health</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="text">账号：</string>
    <string name="text2">密码：</string>
    <string name="account">  请输入账号</string>
    <string name="password">  请输入密码</string>
    <string name="title_activity_registered">RegisteredActivity</string>
    <string name="phone">请输入手机号</string>
    <string name="number">验证码</string>
    <string name="button">发送验证码</string>
    <string name="password2">确认密码</string>
    <string name="service_terms">已阅读并同意《服务条款及隐私政策》</string>
    <string name="title_activity_personal_center">PersonalCenterActivity</string>
    <string name="my_archies">我的健康档案</string>
    <string name="my_services">我的服务</string>
    <string name="title_activity_service_record">ServiceRecordActivity</string>
    <string name="service_times"><u>服务次数：6次</u></string>
    <string name="title_activity_service_details">ServiceDetailsActivity</string>
    <string name="title_activity_hypertension_follow_up">Hypertension_follow_up</string>
    <string name="title_activity_diabetes_follow_up">Diabetes_follow_up</string>
    <string name="login">登 录</string>
    <string name="registered">注 册</string>
    <string name="my_family">我的家庭</string>
    <string name="setting">设 置</string>
    <string name="title_activity_neonatal_family_visit">Neonatal_family_visit</string>
    <string name="title_activity_aftercare1_to8_month">Aftercare1To8Month</string>
    <string name="title_activity_aftercare12_to30_month">Aftercare12To30Month</string>
    <string name="title_activity_aftercare3_to6_year">Aftercare3To6Year</string>
    <string name="title_activity_aftercare1">Aftercare1</string>
    <string name="title_activity_aftercare">Aftercare</string>
    <string name="title_activity_postpartum_visit">PostpartumVisit</string>
    <string name="title_activity_postpartum42_exam">Postpartum42Exam</string>
    <string name="title_activity_vaccine_card">VaccineCard</string>
    <string name="title_activity_vaccination">Vaccination</string>
    <string name="title_activity_tcm_child_guide">TcmChildGuide</string>
    <string name="title_activity_psychiatric_aftercare">psychiatric_aftercare</string>
    <string name="title_activity_personal_info">Personal_info</string>


</resources>
