<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_registered"
    tools:context="com.seimun.mobile_health.RegisteredActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/phone"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="6"
        android:layout_marginTop="20dp"
        android:id="@+id/editText4"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:hint="@string/number"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:id="@+id/button3"
        android:layout_alignBaseline="@id/editText4"
        android:layout_below="@+id/editText3"
        android:layout_toRightOf="@+id/editText3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/editText5"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true"
        android:hint="@string/password"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/editText6"
        android:layout_below="@+id/editText5"
        android:layout_alignParentStart="true"
        android:hint="@string/password2"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editText6"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/service_terms"
        android:id="@+id/textView3"
        android:layout_alignBaseline="@id/radioButton"
        android:layout_below="@+id/editText6"
        android:layout_toEndOf="@+id/radioButton" />

</RelativeLayout>